cmake_minimum_required(VERSION 3.17)
project(Melchior)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Melchior
#        Codeforces/1646/D.cpp)

#add_executable(Melchior
#        Atcoder/abc243/E.cpp)

#add_executable(Melchior
#        LUOGU/LUOGU_P3372.cpp)

#add_executable(Melchior
#        POJ/POJ_1127.cpp)

#add_executable(Melchior
#        CCPC/2021/Qual/F.cpp)

#add_executable(Melchior
#        Astar/2021/semifinal/1001.cpp)

#add_executable(Melchior
#        Google/kickstart/2021/G/A.cpp)

add_executable(Melchior
        Google/codejam/2022/1C/A.cpp)